# solcarto

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
src/backend/: AstronomicalObjects.cpp  AstronomicalObjects.h  SolarSystem.h  binder.cpp  mymath.cpp  mymath.h  physics.h  strong_type.h  test.py  types.h
src/frontend/: app.py
src/frontend/static/img/: starField.old
src/frontend/static/js/: lights.js  objects.js  solcarto.js  textureLoader.js
src/frontend/templates/: index.html
